## ProcessExecutor

AUTOMAKE_OPTIONS = subdir-objects

ACLOCAL_AMFLAGS = ${ACLOCAL_FLAGS}

lib_LTLIBRARIES = libprocessexecutor-0.1.la

AM_CXXFLAGS = -O0 -lpthread -std=c++0x

libprocessexecutor_0_1_la_SOURCES = src/safestream.h src/processexecutor.h src/processexecutor.cpp 	\
				src/safeinputstream.cpp src/safeoutputstream.h 					\
				src/safeoutputstream.cpp src/safestream.cpp src/safeinputstream.h
